Added license info

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Sample project using WCF behaviours to handle the Cross Origin Resource Sharing protocol (http://www.w3.org/TR/access-control/)
+
 See documentation at http://dhvik.blogspot.com/2011/06/supporting-cross-origin-resource.html
+
+[License](License.txt)
